Search is now slightly faster. Added docstring for search wine by tags Gave searching a limit